force-app/main/default/objects/Final_Report__c/Final_Report__c.object-meta.xml
<CustomObject>
    <description>Hospital Management System object for Final Report.</description>
    <label>Final Report</label>
    <nameField>
        <displayFormat>FR-{00000}</displayFormat>
        <label>Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Final Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>