force-app/main/default/objects/Final_Report__c/fields/Admission__c.field-meta.xml
<CustomField>
    <fullName>Admission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admission</label>
    <referenceTo>Admission__c</referenceTo>
    <relationshipLabel>Final Reports</relationshipLabel>
    <relationshipName>Final_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>