force-app/main/default/objects/Final_Report__c/fields/Appointment__c.field-meta.xml
<CustomField>
    <fullName>Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appointment</label>
    <referenceTo>Appointment__c</referenceTo>
    <relationshipLabel>Final Reports</relationshipLabel>
    <relationshipName>Final_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>