force-app/main/default/objects/Final_Report__c/fields/Discharge_Advice__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Advice__c</fullName>
    <label>Discharge Advice</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>