force-app/main/default/objects/Final_Report__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Final Reports</relationshipLabel>
    <relationshipName>Final_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>