force-app/main/default/objects/Final_Report__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Final Reports</relationshipLabel>
    <relationshipName>Final_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>